Added /books endpoint to view top 100 books

--- a/preprocess_db.ipynb
+++ b/preprocess_db.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -494,6 +494,8 @@
     }
    ],
    "source": [
+    "import sqlite3\n",
+    "\n",
     "conn = sqlite3.connect(\"books.db\")\n",
     "cursor = conn.cursor()\n",
     "cursor.execute(\"SELECT `Book-Title` FROM books LIMIT 100;\")\n",
