Added Langgraph and created a graph with an assistant node and 3 tools

--- a/backend/preprocess_db.ipynb
+++ b/backend/preprocess_db.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -152,34 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading from https://www.kaggle.com/api/v1/datasets/download/saurabhbagchi/books-dataset?dataset_version_number=1...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 24.6M/24.6M [00:10<00:00, 2.54MB/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.7), please consider upgrading to the latest version (0.3.8).\n",
       "Path to dataset files: /Users/ankanmahapatra/.cache/kagglehub/datasets/saurabhbagchi/books-dataset/versions/1\n"
      ]
     }
@@ -195,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +177,7 @@
        "['users.csv', 'ratings.csv', 'books.csv']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +278,7 @@
        "'ISO-8859-1'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,14 +289,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w2/qfwv8k7j63b5gvsyfr80f6xw0000gn/T/ipykernel_60383/1000044441.py:5: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/w2/qfwv8k7j63b5gvsyfr80f6xw0000gn/T/ipykernel_18208/1000044441.py:5: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(path + \"/books.csv\", encoding=encoding, delimiter=\";\", on_bad_lines=\"skip\")\n"
      ]
     },
@@ -356,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +338,7 @@
        "2170880"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -536,6 +509,7 @@
    ],
    "source": [
     "## Search for Title\n",
+    "import sqlite3\n",
     "\n",
     "conn = sqlite3.connect(\"books.db\")\n",
     "cursor = conn.cursor()\n",
@@ -548,6 +522,30 @@
     "    print(row)\n",
     "\n",
     "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nCREATE TABLE books (\\n\\t\"ISBN\" TEXT, \\n\\t\"Book-Title\" TEXT, \\n\\t\"Book-Author\" TEXT, \\n\\t\"Year-Of-Publication\" TEXT, \\n\\t\"Publisher\" TEXT, \\n\\t\"Image-URL-S\" TEXT, \\n\\t\"Image-URL-M\" TEXT, \\n\\t\"Image-URL-L\" TEXT\\n)\\n\\n/*\\n3 rows from books table:\\nISBN\\tBook-Title\\tBook-Author\\tYear-Of-Publication\\tPublisher\\tImage-URL-S\\tImage-URL-M\\tImage-URL-L\\n0195153448\\tClassical Mythology\\tMark P. O. Morford\\t2002\\tOxford University Press\\thttp://images.amazon.com/images/P/0195153448.01.THUMBZZZ.jpg\\thttp://images.amazon.com/images/P/0195153448.01.MZZZZZZZ.jpg\\thttp://images.amazon.com/images/P/0195153448.01.LZZZZZZZ.jpg\\n0002005018\\tClara Callan\\tRichard Bruce Wright\\t2001\\tHarperFlamingo Canada\\thttp://images.amazon.com/images/P/0002005018.01.THUMBZZZ.jpg\\thttp://images.amazon.com/images/P/0002005018.01.MZZZZZZZ.jpg\\thttp://images.amazon.com/images/P/0002005018.01.LZZZZZZZ.jpg\\n0060973129\\tDecision in Normandy\\tCarlo D\\'Este\\t1991\\tHarperPerennial\\thttp://images.amazon.com/images/P/0060973129.01.THUMBZZZ.jpg\\thttp://images.amazon.com/images/P/0060973129.01.MZZZZZZZ.jpg\\thttp://images.amazon.com/images/P/0060973129.01.LZZZZZZZ.jpg\\n*/'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_community.utilities import SQLDatabase\n",
+    "\n",
+    "db = SQLDatabase.from_uri(\"sqlite:///books.db\")\n",
+    "\n",
+    "db.get_table_info()"
    ]
   },
   {
